--- a/Ferreteria/Presentacion/FrmTrabajadores.resx
+++ b/Ferreteria/Presentacion/FrmTrabajadores.resx
@@ -121,16 +121,16 @@
   <data name="pnlCantidadEmpleados.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAVYAAACECAYAAADLLgMTAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIRSURBVHhe7djBaQMBEARB5R+P8rPRQwZjf8T2/KrgkPYC
-        aI55ADDyfD6/3o/b7Xa7P79f/3/8eQHAx361VFgBYsIKcKelADFTAEBMWAGWhBXgTksBYqYAgJiwAiwJ
-        K8CdlgLETAEAMWEFWBJWgDstBYiZAgBiwgqwJKwAd1oKEDMFAMSEFWBJWAHutBQgZgoAiAkrwJKwAtxp
-        KUDMFAAQE1aAJWEFuNNSgJgpACAmrABLwgpwp6UAMVMAQExYAZaEFeBOSwFipgCAmLACLAkrwJ2WAsRM
-        AQAxYQVYElaAOy0FiJkCAGLCCrAkrAB3WgoQMwUAxIQVYElYAe60FCBmCgCICSvAkrAC3GkpQMwUABAT
-        VoAlYQW401KAmCkAICasAEvCCnCnpQAxUwBATFgBloQV4E5LAWKmAICYsAIsCSvAnZYCxEwBADFhBVgS
-        VoA7LQWImQIAYsIKsCSsAHdaChAzBQDEhBVgSVgB7rQUIGYKAIgJK8CSsALcaSlAzBQAEBNWgCVhBbjT
-        UoCYKQAgJqwAS8IKcKelADFTAEBMWAGWhBXgTksBYqYAgJiwAiwJK8CdlgLETAEAMWEFWBJWgDstBYiZ
-        AgBiwgqwJKwAd1oKEDMFAMSEFWBJWAHutBQgZgoAiAkrwJKwAtxpKUDMFAAQE1aAJWEFuPPFChD7t6Wv
-        l+/H7Xa73Z/dr18Aco/HNwJVfk1IDTkPAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIhSURBVHhe7dShbcNgFEZRw45RWNhRMkJhxsjGtryAYyc/
+        qgLq6oadTzrk6eE7mZnZmzbP8+fuBsB567p+jZw+tx+/l2XZAPi/vaWXkdVHWG+vngD4u6OlI6vCClAQ
+        VoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALE
+        hBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwA
+        MWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkr
+        QExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLC
+        ChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCY
+        sALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUg
+        JqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAsd9h
+        vbx6AuCU68jqc3tcf47aAnDeEdVt2z5GUs3MrNs03QHmLNMSTxA4YgAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="bunifuPanel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -162,31 +162,31 @@
   <data name="pnlTotalProductosVendidos.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAVYAAACECAYAAADLLgMTAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIRSURBVHhe7djBaQMBEARB5R+P8rPRQwZjf8T2/KrgkPYC
-        aI55ADDyfD6/3o/b7Xa7P79f/3/8eQHAx361VFgBYsIKcKelADFTAEBMWAGWhBXgTksBYqYAgJiwAiwJ
-        K8CdlgLETAEAMWEFWBJWgDstBYiZAgBiwgqwJKwAd1oKEDMFAMSEFWBJWAHutBQgZgoAiAkrwJKwAtxp
-        KUDMFAAQE1aAJWEFuNNSgJgpACAmrABLwgpwp6UAMVMAQExYAZaEFeBOSwFipgCAmLACLAkrwJ2WAsRM
-        AQAxYQVYElaAOy0FiJkCAGLCCrAkrAB3WgoQMwUAxIQVYElYAe60FCBmCgCICSvAkrAC3GkpQMwUABAT
-        VoAlYQW401KAmCkAICasAEvCCnCnpQAxUwBATFgBloQV4E5LAWKmAICYsAIsCSvAnZYCxEwBADFhBVgS
-        VoA7LQWImQIAYsIKsCSsAHdaChAzBQDEhBVgSVgB7rQUIGYKAIgJK8CSsALcaSlAzBQAEBNWgCVhBbjT
-        UoCYKQAgJqwAS8IKcKelADFTAEBMWAGWhBXgTksBYqYAgJiwAiwJK8CdlgLETAEAMWEFWBJWgDstBYiZ
-        AgBiwgqwJKwAd1oKEDMFAMSEFWBJWAHutBQgZgoAiAkrwJKwAtxpKUDMFAAQE1aAJWEFuPPFChD7t6Wv
-        l+/H7Xa73Z/dr18Aco/HNwJVfk1IDTkPAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIhSURBVHhe7dShbcNgFEZRw45RWNhRMkJhxsjGtryAYyc/
+        qgLq6oadTzrk6eE7mZnZmzbP8+fuBsB567p+jZw+tx+/l2XZAPi/vaWXkdVHWG+vngD4u6OlI6vCClAQ
+        VoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALE
+        hBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwA
+        MWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkr
+        QExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLC
+        ChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCY
+        sALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUg
+        JqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAsd9h
+        vbx6AuCU68jqc3tcf47aAnDeEdVt2z5GUs3MrNs03QHmLNMSTxA4YgAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="TopEmpleado.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAVYAAACECAYAAADLLgMTAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIRSURBVHhe7djBaQMBEARB5R+P8rPRQwZjf8T2/KrgkPYC
-        aI55ADDyfD6/3o/b7Xa7P79f/3/8eQHAx361VFgBYsIKcKelADFTAEBMWAGWhBXgTksBYqYAgJiwAiwJ
-        K8CdlgLETAEAMWEFWBJWgDstBYiZAgBiwgqwJKwAd1oKEDMFAMSEFWBJWAHutBQgZgoAiAkrwJKwAtxp
-        KUDMFAAQE1aAJWEFuNNSgJgpACAmrABLwgpwp6UAMVMAQExYAZaEFeBOSwFipgCAmLACLAkrwJ2WAsRM
-        AQAxYQVYElaAOy0FiJkCAGLCCrAkrAB3WgoQMwUAxIQVYElYAe60FCBmCgCICSvAkrAC3GkpQMwUABAT
-        VoAlYQW401KAmCkAICasAEvCCnCnpQAxUwBATFgBloQV4E5LAWKmAICYsAIsCSvAnZYCxEwBADFhBVgS
-        VoA7LQWImQIAYsIKsCSsAHdaChAzBQDEhBVgSVgB7rQUIGYKAIgJK8CSsALcaSlAzBQAEBNWgCVhBbjT
-        UoCYKQAgJqwAS8IKcKelADFTAEBMWAGWhBXgTksBYqYAgJiwAiwJK8CdlgLETAEAMWEFWBJWgDstBYiZ
-        AgBiwgqwJKwAd1oKEDMFAMSEFWBJWAHutBQgZgoAiAkrwJKwAtxpKUDMFAAQE1aAJWEFuPPFChD7t6Wv
-        l+/H7Xa73Z/dr18Aco/HNwJVfk1IDTkPAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIhSURBVHhe7dShbcNgFEZRw45RWNhRMkJhxsjGtryAYyc/
+        qgLq6oadTzrk6eE7mZnZmzbP8+fuBsB567p+jZw+tx+/l2XZAPi/vaWXkdVHWG+vngD4u6OlI6vCClAQ
+        VoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALE
+        hBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwA
+        MWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkr
+        QExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLC
+        ChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCY
+        sALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUg
+        JqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAMWEFiAkrQExYAWLCChATVoCYsALEhBUgJqwAsd9h
+        vbx6AuCU68jqc3tcf47aAnDeEdVt2z5GUs3MrNs03QHmLNMSTxA4YgAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="pnlInfo.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -647,13 +647,13 @@
   <data name="bunifuLabel2.BaseStylesheet" xml:space="preserve">
     <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 11pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(105, 105, 105); text-align: left; }</value>
   </data>
-  <data name="lblCategorias.BaseStylesheet" xml:space="preserve">
+  <data name="lblCantidEmpl.BaseStylesheet" xml:space="preserve">
     <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 24pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(0, 0, 0); text-align: left; }</value>
   </data>
-  <data name="bunifuLabel4.BaseStylesheet" xml:space="preserve">
+  <data name="lblCantProdVendidos.BaseStylesheet" xml:space="preserve">
     <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 24pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(0, 0, 0); text-align: left; }</value>
   </data>
-  <data name="bunifuLabel5.BaseStylesheet" xml:space="preserve">
+  <data name="lblTopEmpleado.BaseStylesheet" xml:space="preserve">
     <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 24pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(0, 0, 0); text-align: left; }</value>
   </data>
 </root>
