--- a/Ferreteria/Presentacion/FrmVentas.resx
+++ b/Ferreteria/Presentacion/FrmVentas.resx
@@ -475,7 +475,7 @@
         8Yp/cqBJi8e0tZ22uPO6kgPDA0ohPIQgPIQgPIQgPASo7A9T9JxjSSVjdwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="bunifuThinButton21.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnAgregarProducto.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAMcAAAArCAYAAADMg5w/AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIoSURBVHhe7d0/axRRFIbxfB6LhBCSaAohkDaQxkawERsR
