--- a/Ferreteria/Presentacion/FrmVentas.resx
+++ b/Ferreteria/Presentacion/FrmVentas.resx
@@ -157,6 +157,9 @@
         ZOvH8f6OsgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="lblFecha.BaseStylesheet" xml:space="preserve">
+    <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 12pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(105, 105, 105); text-align: left; }</value>
+  </data>
   <data name="lblTotal.BaseStylesheet" xml:space="preserve">
     <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 12pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(105, 105, 105); text-align: left; }</value>
   </data>
