--- a/Ferreteria/Presentacion/FrmClientes.resx
+++ b/Ferreteria/Presentacion/FrmClientes.resx
@@ -144,7 +144,7 @@
         2GnTSchmj3F19R8OxFdAMK49+AAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="bunifuLabel6.BaseStylesheet" xml:space="preserve">
+  <data name="lblTotalClients.BaseStylesheet" xml:space="preserve">
     <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 24pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(0, 0, 0); text-align: left; }</value>
   </data>
   <data name="bunifuLabel7.BaseStylesheet" xml:space="preserve">
